@@ -3,9 +3,11 @@ aptsh (0.0.6) unstable; urgency=low
   * Fixed *.deb completion for dpkg --install command.
   * Fixed bug with --execute and commands that require initialization of
     libapt-pkg.
-  * "orphans" and "orphans-all" are now pipeable. 
+  * "orphans" and "orphans-all" are now pipeable.
+  * Rewritten configuration file parser. Closes: #356770.
+  * Fixed bashism in debian/rules. Closes: #374444. 
 
- -- Marcin Wrochniak <wrochniak@gmail.com>  Mon,  1 May 2006 18:15:00 +0200
+ -- Marcin Wrochniak <wrochniak@gmail.com>  Tue, 20 Jun 2006 19:49:45 +0200
 
 aptsh (0.0.5) unstable; urgency=low
 
